--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "pywin32>=311",
-]
+dependencies = []
 
 [dependency-groups]
 dev = [
-    "ruff>=0.14.2",
+    "ruff>=0.14.5",
 ]
